test/invalid/baseline/dict-field-unterminated.txt
Syntax error at line 1, since `dictionary Nene`:
 { DOMString cpp = "high" };
                          ^ Unterminated dictionary member
